# locksmith

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  action.yml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: docker.yaml  docker.yml  test-action.yml  test.yml
.sqlx/: query-09d5c7e4829721a8d33975034ec970f527d10fe2957088aecdd74a4bfde43190.json  query-615b35f231d1481506408c4ae53bf1dc71b2f472400088fdaa5d07beb4cb8e41.json  query-860c8c5469e278fc5bc4eea493060e5e134fb242af1ea8871d437f26a27c121a.json
crates/locksmith/: Cargo.toml  README.md
crates/locksmith-cli/: Cargo.toml
crates/locksmith-cli/src/: main.rs
crates/locksmith-cli/templates/: comment.md.jinja2
crates/locksmith-cli/tests/: test_cli.rs
crates/locksmith-graph/: Cargo.toml
crates/locksmith-graph/src/: main.rs
crates/locksmith/.sqlx/: query-02bc67e102067f121d0f7a895905d435e7cb2852e4dab880069d3340c5760df6.json  query-b274527d803156b157ab6059ecc17908ce18477626fc54f7ec840b3433edc364.json  query-b35f0c164fba00544e7f31e109644b522f8e37202ec67d73f6b704ec34b932ee.json  query-b8bb9669c645e3ae9d67695d1fcf5f2ddcc7b9621075feef6bbade5007f93dfc.json
crates/locksmith/src/: driver.rs  executor.rs  introspection.rs  lib.rs  locker.rs  objects.rs  oracle.rs  tests.rs
crates/locksmith/tests/: test_queries.rs  test_schema.sql
crates/locksmith/tests/common/: mod.rs  test_case.rs
crates/locksmith/tests/queries/: alter_type.sql  drop_column.sql  drop_index.sql  drop_table.sql  set_not_null.sql
docker/: docker-bake.hcl  patch_docker.py
src/: introspection.rs  lock.rs  main.rs
