[package]
name = "locksmith-cli"
version = "0.2.2"
edition.workspace = true
description = "CLI for extracting Postgres locks from a given SQL statement"
license.workspace = true
repository.workspace = true
readme = "../../README.md"


[dependencies]
locksmith = { path = "../locksmith", version = "0.2.3" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
clap = { version = "4.5.27", features = ["derive", "env"] }
anyhow = "1.0.95"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
testcontainers-modules = { version = "0.14.0", features = ["postgres", "watchdog"] }
askama = "0.14.0"
itertools = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0.16"
serde_json = "1.0.138"
