[package]
name = "locksmith-graph"
version = "0.1.2"
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
ratatui = {version = "0.29.0"}
color-eyre = "0.6.5"
rand = "0.10.0-rc.0"
tokio = {version = "1.48.0", features = ["full"]}
tokio-postgres = "0.7.15"
clap = {version = "4.5.52", features = ["derive"]}
