[package]
name = "locksmith"
version = "0.2.3"
edition.workspace = true
description = "Extract Postgres locks from a given SQL statement"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.95"
tracing = { version = "0.1.43", features = ["async-await"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "macros", "time"] }
derive_more = { version = "2.0.1", features = ["from"] }
tokio-postgres = "0.7.13"
tokio = { version = "1.43.0", features = ["macros"] }

[dev-dependencies]
tracing-test = "0.2.5"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
tokio = {version = "1.48.0", features = ["full"]}
serde_json = "1.0.138"
